Moved some CSS from Layout and styles to here to fix fields from being cut off in some themes.

--- a/css/ninja-forms-display.css
+++ b/css/ninja-forms-display.css
@@ -1,3 +1,12 @@
+.ninja-forms-form-wrap *,
+.ninja-forms-form-wrap *:after,
+.ninja-forms-form-wrap *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 a.tooltip {outline:none; text-decoration: none; }
 a.tooltip strong {line-height:30px;}
 a.tooltip:hover {text-decoration:none;}
@@ -121,7 +130,9 @@ a.tooltip span
 .ninja-forms-form-wrap input,
 .ninja-forms-form-wrap select ,
 .ninja-forms-form-wrap textarea {
+    padding: 15px 12px;
     width: auto;
+    vertical-align: inherit;
 }
 .ninja-forms-form-wrap label {
     font-weight: bold;
